Direct3D 9
	* Added VertexTextureSampler enumeration.
	* Changed Include.Open to include missing parentStream parameter.
	* Fixed Mesh.ToXFile to handle meshes that don't have materials and effects.
	* Fixed a bug in Sprite.Draw where source rectangle was not taken into account.
	* Fixed a bug that would cause EffectStateManager methods to crash if a null shader or texture was passed to them.
		
Direct3D 10
	* Added InputElement.AppendAligned property.
	* Added FromFile to ShaderResourceView.
	* Changed Include.Open to include missing parentStream parameter.
	* Changed Font.Draw color parameter to Color4 instead of unsigned int.

Direct3D 11
	* Added the UnorderedAccess member to BindFlags.
	* Added InputElement.AppendAligned property.
	* Added the ability to create structured buffer resources.
	* Added missing fields to ShaderResourceViewDescription.
	* Added missing Flag field to DepthStencilViewDescription.
	* Added null checks to OutputMergerWrapper methods.
	
XAPO
	* Implemented XAPO.