@@ -45,7 +45,15 @@ namespace SlimDX
 			/// input-buffer data for the input-assembler stage.
 			/// </summary>
 			/// <unmanaged>ID3D11Device::CreateInputLayout</unmanaged>
+			[System::Obsolete("Use the constructor overload taking a ShaderSignature as the second argument instead.")]
 			InputLayout( SlimDX::Direct3D11::Device^ device, array<InputElement>^ elements, Direct3D10::ShaderSignature^ shaderSignature );
+			
+			/// <summary>
+			/// Initializes a new instance of the <see cref="InputLayout" /> object to describe the
+			/// input-buffer data for the input-assembler stage.
+			/// </summary>
+			/// <unmanaged>ID3D11Device::CreateInputLayout</unmanaged>
+			InputLayout( SlimDX::Direct3D11::Device^ device, Direct3D10::ShaderSignature^ shaderSignature, array<InputElement>^ elements );
 		};
 	}
 };
